--- a/parlay/index/migrations/templates/par/index.html
+++ b/parlay/index/migrations/templates/par/index.html
@@ -9,10 +9,11 @@
 
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 content-col content">
                         <img src="{% static 'img/agenda.png' %}" class="type"/>
-                        <h2 class = "title"> {{ book.title|truncatewords:5}} </h2>
+                        <h2 class = "title "> {{ book.title|truncatewords:5}} </h2>
                         <br>
                         <h3 class = "author"> {{ book.author}}</h3>
-                        <p class = "description"> {{ book.description|truncatewords:20}}</p>
+                        <p class = "description lead" > {{ book.description|truncatewords:20}}</p>
+                        <br>
                          <a href ="{% url 'detail-book' book.id %}"> <div class="col detail-button btn btn-block white bg-teal">Learn More </div> </a>
                     </div>
 
