--- a/parlay/index/migrations/templates/par/login.html
+++ b/parlay/index/migrations/templates/par/login.html
@@ -6,7 +6,7 @@
 <div id = "" class ="container-fluid  ">
   <h2 align="center">Login</h2>
     <style> .navigation{ display:none;}
-            body{ background:url('{% static 'img/memphis-colorful.png' %}') repeat;
+            body{ background: linear-gradient(to right, #F6EFD2, #CEAD78);
             display : flex;
             align-items: center;
 
@@ -39,7 +39,7 @@
             {% endfor %}
         {% endfor %}
         <br>
-         <button type="submit" class="btn btn-primary">Login <i class="fas fa-arrow-right"></i></button>
+         <button type="submit" class="button-small btn bg-teal white ">Login <i class="fas fa-arrow-right"></i></button>
      </div>
   </form>
 </div>
