--- a/parlay/index/migrations/templates/par/signup.html
+++ b/parlay/index/migrations/templates/par/signup.html
@@ -38,7 +38,7 @@
             {% endfor %}
         {% endfor %}
          <br>
-         <button type="submit" class="btn btn-primary">Sign up <i class="fas fa-arrow-right"></i></button>
+         <button type="submit" class="button-small btn bg-teal white ">Sign up <i class="fas fa-arrow-right"></i></button>
     </div>
   </form>
 
