--- a/parlay/index/migrations/templates/par/detail.html
+++ b/parlay/index/migrations/templates/par/detail.html
@@ -6,7 +6,7 @@
 
         <br>
         <div class ="row container-fluid">
-                <div class="col-12 col-md-10 d-flex align-items-center justify-content-center">
+                <div class="col-12 col-md-10">
                         <h1> {{book.title}} </h1>
                 </div>
 
@@ -15,17 +15,20 @@
                 <div class = "col-12 col-md-10 container-fluid">
                       <h3> {{book.author}} </h3>
                 </div>
-                <div class="col-10 col-md-2 container-fluid ">
+                <div class="col-12 col-md-2 container-fluid  add-book">
                         {% if user.is_authenticated %}
-
-                                <a class="btn btn-outline-primary btn-block" href="{% url 'add-book' book_id=book.id  %}">  Add book </a>
-                        {% endif %}
+                                {% if book in user.profile.books_read.all %}
+                                    <p class="text-muted"> You have that book in list!</p>
+                                {% else %}
+                                    <a class="btn btn-primary bg-aqua white btn-block " href="{% url 'add-book' book_id=book.id  %}">  Add book </a>
+                                {% endif %}
+                    {% endif %}
                 </div>
         </div>
         <br>
         <div class="row container-fluid">
                 <div class = "col-12">
-                      <p class="description_text"> {{book.description}}</p>
+                      <p class="description_text lead"> {{book.description}}</p>
                 </div>
 
         </div>
