--- a/parlay/index/migrations/templates/par/login.html
+++ b/parlay/index/migrations/templates/par/login.html
@@ -1,14 +1,15 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
 {% block title %} Login {% endblock %}
-
 {% block content %}
+
 <div id = "" class ="container-fluid  ">
   <h2 align="center">Login</h2>
     <style> .navigation{ display:none;}
-            body{ background: linear-gradient(to right, #F6EFD2, #CEAD78);
+            body{
             display : flex;
             align-items: center;
+
 
 
             }
