--- a/parlay/index/migrations/templates/par/profile.html
+++ b/parlay/index/migrations/templates/par/profile.html
@@ -3,71 +3,94 @@
 {% block title %} {{username.username}}'s profile {% endblock %}
 {% block content %}
     <br>
-<div class = 'col container-fluid'>
 
-    <H1 id = "username" class="display-1">{{ username.username }}</H1>
-    {% if user.id == username.id %}
-        <h3 > {{username.profile.tokens}} <small> tokens </small></h3>
-        <h4 >{{username.profile.bio}}</h4>
+    <div class="card d-flex text-center justify-content-center">
 
-        <a class="button btn bg-teal white " href="{% url 'edit-profile' user_id=user.id %}">  <i class="fas fa-pencil-alt"></i>  Edit profile </a>
+        <H1 id = "username" class="display-4">{{ username.username }}</H1>
+        {% if user.id == username.id %}
+            <h3 > {{username.profile.tokens}} <small> tokens </small></h3>
+            <h4 >{{username.profile.bio}}</h4>
 
-    {% else %}
-        {% if username in user.profile.friends.all %}
-            <a class="btn btn-outline-danger remove-friend bg-red white" href="{% url 'remove-friend' user_id=username.id %}"> Remove friend </a>
+            <a class="button col-12 btn bg-teal white " href="{% url 'edit-profile' user_id=user.id %}">  <i class="fas fa-pencil-alt"></i>  Edit profile </a>
+
         {% else %}
-            <a class="btn btn-outline-success add-friend bg-green white" href="{% url 'add-friend' user_id=username.id %}"> Add friend </a>
+            {% if username in user.profile.friends.all %}
+                <a class="btn btn-outline-danger remove-friend bg-red white" href="{% url 'remove-friend' user_id=username.id %}"> Remove friend </a>
+            {% else %}
+                <a class="btn btn-outline-success add-friend bg-green white" href="{% url 'add-friend' user_id=username.id %}"> Add friend </a>
 
+            {% endif %}
         {% endif %}
-    {% endif %}
-
-
-        <hr>
+    </div>
+    <br>
+    <div class="card">
         {% if username.profile.books_read.count %}
-            <h4 class="display-4"> Books read:</h4>
-            <div class="container-fluid  profile-list bg-white">
+            <h4 class="display-4 text-center"> Books read:</h4>
+            <br>
+            <div class="container-fluid  ">
+                {% for book in username.profile.books_read.all|slice:":4" %}
                 <div class="row">
-                    {% for book in username.profile.books_read.all|slice:":4" %}
-                        <div class="col">
+
+                        <div class="col-12   text-center profile-list bg-white">
                             <a href="{% url 'detail-book' book_id=book.id %}"><h4> {{ book.title|truncatewords:8 }}</h4></a>
                             <p> {{ book.author }}</p>
 
                         </div>
-                    {% endfor %}
-                </div>
-                <br>
-                <div class="row ">
-                    <a href="{% url 'books-list' user_id=username.id %}" class=" more-button container-fluid bg-silver black">View all </a>
+
 
                 </div>
                 <br>
+                {% endfor %}
             </div>
+            <br>
+            <div class="row ">
+                    <a href="{% url 'books-list' user_id=username.id %}" class="col-8 more-button btn container-fluid bg-silver black">View all </a>
+
+                </div>
         {% else %}
-            <h4 class="display-2"> This user haven't read any books yet :(</h4>
+            <h4 class="lead text-center"> This user haven't read any books yet :(</h4>
         {% endif %}
+
+    </div>
+    <br>
+    <div class="card">
         {% if username.profile.friends.count %}
-            <h4 class="display-4"> Friends:</h4>
-            <div class="container-fluid  profile-list bg-white">
+            <h4 class="display-4 text-center"> Friends:</h4>
+            <br>
+            <div class="container-fluid  col-12 ">
+
+                {% for friend in username.profile.friends.all %}
                 <div class="row">
-                    {% for friend in username.profile.friends.all %}
-                        <div class="col">
-                           <h4> <a href="{% url 'profile' user_id=friend.id %}"> {{ friend.username|truncatewords:8 }}</a>; </h4>
+
+                        <div class="col-12  profile-list bg-white text-center">
+                           <h4> <a href="{% url 'profile' user_id=friend.id %}"> {{ friend.username|truncatewords:8 }}</a></h4>
 
                         </div>
-                    {% endfor %}
-                </div>
-                <br>
-                <div class="row ">
-                    <a href="{% url 'friends-list' user_id=username.id %}" class="more-button container-fluid bg-silver black">View all </a>
 
                 </div>
                 <br>
+                {% endfor %}
+
+
+
             </div>
-        {% else %}
-            <h4> This user has no friends :(</h4>
-        {% endif %}
+            <br>
+            <div class="row   text-center">
+                           <a href="{% url 'friends-list' user_id=username.id %}"
+                                  class=" col-8 more-button  btn container-fluid bg-silver black">View all </a>
 
-</div>
+                </div>
+        {% else %}
+            <h4 class="display-4"> This user has no friends :(</h4>
+        {% endif %}
+    </div>
+    <br>
+    <div class="add-books card  text-center gray">
+        <p class="lead"> Не можете найти книгу на сайте и хотите ее добавить? <a href="{% url 'add-book' %}" class="black">Добавьте её с ЛитРеса!  </a></p>
+
+    </div>
+
+
 
 
 
