--- a/parlay/index/migrations/static/css/style.css
+++ b/parlay/index/migrations/static/css/style.css
@@ -1,38 +1,37 @@
-
+@import url('https://fonts.googleapis.com/css?family=Poppins:900i');
 body{
     height:100%;
     width:100%;
+    background: linear-gradient(45deg, #01ff70, #39cccc, #0074d9, #ff851b, #ff4136, #b10dc9) fixed;
+    background-size: 1200% 1200%;
+    animation: AnimationName 60s ease infinite;
 
 
+
 }
-.navigation{
-    box-shadow: 0 0 10px 4px rgba(0,0,0,0.35);
-    z-index: 1000;
-}
-.navigation a{
-    color: white;
-}
-.navigation a:hover{
-    color: #39CCCC;
+@keyframes AnimationName {
+    0%{background-position:0% 99%}
+    50%{background-position:100% 2%}
+    100%{background-position:0% 99%}
 }
 
-.logo{
-    height: 40px;
-    font-size: 1.25em;
-    padding: 1%;
+
+#logo{
+    font-size: 2.5em;
+    font-family: 'Poppins', sans-serif;
+
     color:white;
-    align-items-center;
-    border-radius:8px;
-    box-shadow: 0 0 20px 8px rgba(0,0,0,0.25);
+
+
+}
+.searchbar{
+
 }
 footer{
     padding:2%;
     width: 100%;
 }
-.more-item{
-    margin-bottom: 2%;
-}
-.logo{
+#logo{
     text-shadow: 0 1px 0px #378ab4,
     1px 0 0px #5dabcd,
     1px 2px 1px #378ab4,
@@ -50,19 +49,35 @@ footer{
     7px 8px 0px #378ab4,
     8px 7px 0px #5dabcd;
 }
-.logo:hover{
+#logo:hover{
     transition: all 0.5s ease-out;
-    color: black;
-    background-color: #FF4136;
-    box-shadow: 0 0 40px 16px rgba(0,0,0,0.25);
-}
+    color: #7FDBFF;
 
+}
+.navigation{
+
+    z-index: 1000;
+}
+.navigation a{
+    color: white;
+}
+.navigation a:hover{
+    color: #111111;
+}
 #search{
     max-width: 10000px;
     width: 75%;
     height: 40px;
 }
-input[type=text], input[type=email], input[type=password]{
+.card{
+    box-shadow: 10px 10px 20px 8px rgba(0,0,0,0.25);
+    background: rgba(255,255,255,0.8);
+    padding: 20px;
+    width: 75%;
+    min-width: 350px;
+    border-radius: 8px;
+}
+input[type=text], input[type=email], input[type=password], input[type=url]{
                 width:75%;
                 max-width: 250px;
                 border: 1px solid #888;
@@ -80,7 +95,7 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus{
 select {
     outline: none;
     width:100%;
-    max-width: 750px;
+
     padding: 16px 20px;
     border: none;
     border-radius: 8px;
@@ -89,11 +104,10 @@ select {
 }
 
 .button{
-    width:75%;
-    max-width:750px;
     box-shadow: 0 0 10px 4px rgba(0,0,0,0.25);
     transition: all 0.25s ease-out;
     border-radius: 8px;
+    border:none;
 }
 .button-small{
     transition: all 0.25s ease-out;
@@ -107,8 +121,7 @@ select {
     text-align:left;
 }
 .more-button{
-    width:25%;
-    max-width:750px;
+    width: 100%;
     box-shadow: 0 0 10px 4px rgba(0,0,0,0.25);
     transition: all 0.25s ease-out;
     border-radius: 8px;
@@ -134,18 +147,17 @@ select {
     font-size: 1.5em;
     text-align:center;
 }
-.textarea{
-    width: 75%;
-    max-width: 750px;
+textarea{
+    outline: none;
     box-shadow: 0 0 10px 4px rgba(0,0,0,0.15);
     border-radius: 8px;
 }
 
 .profile-list{
-    border-radius: 4px;
-    box-shadow: 0 0 3px 1px #aaa inset;
+    border-radius: 8px;
+    box-shadow: 2px 2px 20px 4px rgba(0,0,0,0.5);
     padding: 1%;
-    margin:0;
+    margin-left:;
 }
 .profile-list a{
     color: black;
@@ -167,15 +179,25 @@ a:hover{
     border:
 }
 #container{
-    position:absolute; top: 10%; width:100%;
+    position:relative;
+    top: 10%;
+    width:100%;
+    height: 100%;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .content-col{
     margin:2%;
     text-align: left;
-    padding:1%;
+    padding:20px;
     position:relative;
     min-height: 30%;
+    padding:2%;
+    border-radius: 8px;
+    box-shadow: 10px 10px 20px 8px rgba(0,0,0,0.25);
+    background: rgba(255,255,255,0.8);
 }
 
 .col{
@@ -222,10 +244,11 @@ a:hover{
     margin-bottom: 10%;
 }
 .detail-button{
-    position:absolute;
+    position: absolute;
+    left:5%;
+    width: 90%;
+    bottom: 3%;
     box-shadow: 0 0 10px 4px rgba(0,0,0,0.25);
-    bottom: 0;
-    left: 0;
     text-decoration: none;
     transition: all 0.25s ease-out;
 }
