--- a/parlay/index/migrations/templates/par/base.html
+++ b/parlay/index/migrations/templates/par/base.html
@@ -15,32 +15,33 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <title>{% block title %} {% endblock %}</title>
 </head>
-<body class="bg-silver">
-    <nav class="navbar navbar-default navbar-expand-md text-center text-md-left navigation bg-maroon aqua">
+<body class="">
+    <nav class="navbar navbar-default navbar-expand-md text-center text-md-left navigation black">
       <div class="container-fluid">
-        <div class="navbar-header  col-8 col-md-2 nav-link d-flex">
-          <a class="navbar-brand container-fluid logo text-center border-white bg-aqua black" href="{% url 'index' %}">Parlay</a>
+        <div class="navbar-header  col-8 col-md-3">
+          <a class="navbar-brand container-fluid  text-center" href="{% url 'index' %}" id="logo">Parlay</a>
 
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
-            <span >Menu</span>
+            <span class="white"><i class="fas fa-bars"></i></span>
           </button>
 
       <div class="collapse navbar-collapse navbar-expand-lg">
 
         {% if user.is_authenticated %}
-            <div class=" col-12 col-md-6">
-                <input id="search" type="text" placeholder="Search">
-                <button type="submit" class="button-search btn bg-teal white "><i class="fas fa-search"></i></button>
-
+            <div class=" col-12 col-md-6 searchbar">
+                <form action="{% url 'search' %}" method="get">
+                    <input id="search" type="text" placeholder="Search" name="q">
+                    <button type="submit" class="button-search btn bg-teal white "><i class="fas fa-search"></i></button>
+                </form>
 
             </div>
-            <div class ="d-inline-flex nav-link col-12 col-md-2">
+            <div class ="d-inline-flex nav-link col-12 col-md-2  justify-content-center">
                     <a href="{% url 'wagers' %}"> My wagers</a>
 
             </div>
-            <div class="d-inline-flex nav-link col-12 col-md-2">
+            <div class="d-inline-flex nav-link col-12 col-md-2  justify-content-center  ">
                 <a href = "{% url 'add-wager' %}">Add wager</a>
 
             </div>
@@ -48,7 +49,7 @@
             <div class="0 col-md-10"></div>
 
         {% endif %}
-          <div class="d-inline-flex nav-link col-12 col-md-2">
+          <div class="d-inline-flex nav-link col-12 col-md-2   justify-content-center ">
 
           {% if user.get_username == none or not user.is_authenticated %}
 
@@ -73,5 +74,6 @@
     <br>
 
     </div>
+
 </body>
 </html>
