--- a/parlay/index/migrations/templates/par/friends.html
+++ b/parlay/index/migrations/templates/par/friends.html
@@ -5,15 +5,19 @@
 
 {% block content %}
     <br>
-    <h3 class="display-4 text-right"> :{{username.username}}'s friends </h3>
-    <hr>
-    <div class="row container-fluid">
+    <div class="card">
+        <h3 class="display-4 text-center"> {{username.username}}'s friends: </h3>
+    </div>
+    <br> <br>
+
+
     {% for friend in username.profile.friends.all %}
-    <div class="col-12 col-md-6 col-lg-4 text-right">
+    <div class="col-12 card text-center bg-white">
         <a href="{% url 'profile' user_id=friend.id %}" class="display-4  black">{{ friend.username }}</a>
-        <p class="lead text-left">{{friend.profile.bio}}</p>
+        <p class="lead text-center">{{friend.profile.bio|truncatewords:20}}</p>
 
     </div>
+    <br>
     {% endfor %}
-    </div>
+
 {% endblock %}
