--- a/parlay/index/migrations/static/css/style.css
+++ b/parlay/index/migrations/static/css/style.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:900i');
+@import url('https://fonts.googleapis.com/css?family=Exo+2:300,400|Merriweather:300|Poppins:900i');
 body{
     height:100%;
     width:100%;
     background: linear-gradient(45deg, #01ff70, #39cccc, #0074d9, #ff851b, #ff4136, #b10dc9) fixed;
     background-size: 1200% 1200%;
     animation: AnimationName 60s ease infinite;
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 300;
 
 
 
@@ -13,9 +15,26 @@ body{
     0%{background-position:0% 99%}
     50%{background-position:100% 2%}
     100%{background-position:0% 99%}
+
 }
-
-
+#new-wagers{
+    color: #fff;
+    background-color: #dc3545;
+    margin-left: 2%;
+    padding: 1% 8% ;
+    border-radius: 50%;
+    box-shadow: 0 0 5px 1px #f66;
+}
+.sans-text{
+    font-family: 'Merriweather', sans;
+    font-size: 1.375rem;
+    }
+@include media-breakpoint-up(md) {
+  .sans-text{
+    font-size: 1.25em;
+    text-indent:0;
+  }
+}
 #logo{
     font-size: 2.5em;
     font-family: 'Poppins', sans-serif;
@@ -24,10 +43,45 @@ body{
 
 
 }
+
 .searchbar{
 
 }
+
+.avatar{
+    position:relative;
+    width: 100%;
+    border: 5px solid white;
+    box-shadow: 4px 4px 4px 1px rgba(0,0,0,0.25);
+}
+.default-avatar{
+    font-size: 5rem;
+    text-align: center;
+}
+#book-cover{
+    border-radius: 8px;
+    border: 1px solid #fff;
+    box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.3);
+    width: 100%;
+
+}
+.book-cover{
+    width:65%;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.3);
+
+
+}
+.book-cover-small{
+    width:200px;
+    border-radius: 2px;
+    border: 1px solid #fff;
+    box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.3);
+}
 footer{
+
+    margin-top: 5%;
     padding:2%;
     width: 100%;
 }
@@ -55,7 +109,7 @@ footer{
 
 }
 .navigation{
-
+    font-weight: 400;
     z-index: 1000;
 }
 .navigation a{
@@ -75,7 +129,17 @@ footer{
     padding: 20px;
     width: 75%;
     min-width: 350px;
+    display:flex;
+    justify-content: center;
+    align-items:center;
     border-radius: 8px;
+
+}
+input[type=file]{
+    position: relative;
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
 input[type=text], input[type=email], input[type=password], input[type=url]{
                 width:75%;
@@ -85,8 +149,9 @@ input[type=text], input[type=email], input[type=password], input[type=url]{
                 transition: all 0.25s ease-in-out;
                 padding-left:1%;
                 padding-right:1%;
+                outline:none;
             }
-input[type=text]:focus, input[type=email]:focus, input[type=password]:focus{
+input[type=text]:focus, input[type=email]:focus, input[type=password]:focus,input[type=url]:focus{
                 box-shadow: 0 0 20px 8px #ccf;
 
                 border-radius: 25px;
@@ -157,7 +222,13 @@ textarea{
     border-radius: 8px;
     box-shadow: 2px 2px 20px 4px rgba(0,0,0,0.5);
     padding: 1%;
-    margin-left:;
+
+}
+.profile-list-book{
+    border-radius: 8px;
+    box-shadow: 2px 2px 20px 4px rgba(0,0,0,0.5);
+
+
 }
 .profile-list a{
     color: black;
@@ -186,6 +257,7 @@ a:hover{
     display: inline-flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .content-col{
