--- a/parlay/index/templates/par/edit_profile.html
+++ b/parlay/index/templates/par/edit_profile.html
@@ -5,11 +5,16 @@
 
 {% block content %}
 <br>
-    <div class="container-fluid card">
-        <form method="POST" class="container-fluid post-form form-group d-flex justify-content-center flex-column align-items-center">
-            {% csrf_token %}
+    <div class="container-fluid card text-center">
+        <form method="POST" enctype="multipart/form-data" class="container-fluid post-form form-group d-flex justify-content-center flex-column align-items-center">
+           {% csrf_token %}
             <textarea class="textarea container-fluid" type="text"  name="{{ form.bio.name }}" value="{{ form.bio.value }}" class = "form-control" rows="10">{{ user.profile.bio}}</textarea>
-            <br><br>
+            <br>
+            {{ form.avatar }}
+
+            <br>
+
+
             <button type="submit" class="save button btn btn-block bg-teal white">Save</button>
        </form>
     </div>
